Added basic shader support

--- a/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
+++ b/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="JN_Triangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JN_Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="JN_Logging.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="JN_Triangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="JN_Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
