--- a/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj
+++ b/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="JN_Game.cpp" />
     <ClCompile Include="JN_Logging.cpp" />
     <ClCompile Include="JN_Main.cpp" />
+    <ClCompile Include="JN_Shader.cpp" />
     <ClCompile Include="JN_Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -31,6 +32,7 @@
     <ClInclude Include="JN_FrameLock.h" />
     <ClInclude Include="JN_Game.h" />
     <ClInclude Include="JN_Logging.h" />
+    <ClInclude Include="JN_Shader.h" />
     <ClInclude Include="JN_Triangle.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -38,7 +40,7 @@
     <ProjectGuid>{FC49E162-563D-4E4A-B6F1-5EB920162ED6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CGP2012M_Graphics</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectName>Graphics2D</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
