--- a/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
+++ b/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="JN_Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JN_Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="JN_Logging.h">
