--- a/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj
+++ b/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="JN_Application.cpp" />
     <ClCompile Include="JN_Bubble.cpp" />
+    <ClCompile Include="JN_BubbleController.cpp" />
     <ClCompile Include="JN_Circle.cpp" />
     <ClCompile Include="JN_FrameLock.cpp" />
     <ClCompile Include="JN_Game.cpp" />
@@ -29,12 +30,13 @@
     <ClCompile Include="JN_Player.cpp" />
     <ClCompile Include="JN_Shader.cpp" />
     <ClCompile Include="JN_Texture.cpp" />
-    <ClCompile Include="JN_Transfom.cpp" />
+    <ClCompile Include="JN_Transform.cpp" />
     <ClCompile Include="JN_Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="JN_Application.h" />
     <ClInclude Include="JN_Bubble.h" />
+    <ClInclude Include="JN_BubbleController.h" />
     <ClInclude Include="JN_Circle.h" />
     <ClInclude Include="JN_FrameLock.h" />
     <ClInclude Include="JN_Game.h" />
