--- a/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
+++ b/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
@@ -7,33 +7,30 @@
     <Filter Include="Header Files">
       <UniqueIdentifier>{271bea9b-d331-4b53-bb48-cb6e8d477885}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Done">
+      <UniqueIdentifier>{f0956303-86d4-496d-97af-dc7e7431300f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Done">
+      <UniqueIdentifier>{52f7f2c3-bf89-4eb0-9461-baff08dc35f6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Archive">
+      <UniqueIdentifier>{6b6f3d7e-879b-4ecb-be9e-7818bc615fa9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Archive">
+      <UniqueIdentifier>{23dc197a-aad6-458e-b700-9d028614dac0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="JN_Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="JN_Logging.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="JN_Game.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="JN_FrameLock.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="JN_Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="JN_Triangle.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="JN_Shader.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="JN_Player.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="JN_Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="JN_Circle.cpp">
@@ -42,36 +39,36 @@
     <ClCompile Include="JN_Transform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="JN_Bubble.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="JN_BubbleController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JN_Bubble.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="JN_FrameLock.cpp">
+      <Filter>Source Files\Done</Filter>
+    </ClCompile>
+    <ClCompile Include="JN_Triangle.cpp">
+      <Filter>Source Files\Archive</Filter>
+    </ClCompile>
+    <ClCompile Include="JN_Logging.cpp">
+      <Filter>Source Files\Done</Filter>
+    </ClCompile>
+    <ClCompile Include="JN_Texture.cpp">
+      <Filter>Source Files\Done</Filter>
+    </ClCompile>
+    <ClCompile Include="JN_Shader.cpp">
+      <Filter>Source Files\Done</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="JN_Logging.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="JN_Game.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="JN_FrameLock.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="JN_Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="JN_Triangle.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="JN_Shader.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="JN_Player.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="JN_Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="JN_Transform.h">
@@ -80,11 +77,29 @@
     <ClInclude Include="JN_Circle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JN_BubbleController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="JN_Gameobject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="JN_Bubble.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="JN_BubbleController.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="JN_FrameLock.h">
+      <Filter>Header Files\Done</Filter>
+    </ClInclude>
+    <ClInclude Include="JN_Triangle.h">
+      <Filter>Header Files\Archive</Filter>
+    </ClInclude>
+    <ClInclude Include="JN_Logging.h">
+      <Filter>Header Files\Done</Filter>
+    </ClInclude>
+    <ClInclude Include="JN_Shader.h">
+      <Filter>Header Files\Done</Filter>
+    </ClInclude>
+    <ClInclude Include="JN_Texture.h">
+      <Filter>Header Files\Done</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
