--- a/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
+++ b/VSProject/Graphics2D/Graphics2D/Graphics2D.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="JN_Texture.h">
       <Filter>Header Files\Done</Filter>
     </ClInclude>
+    <ClInclude Include="JN_Square.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
