--- a/VSProject/CGP2012M_Graphics/CGP2012M_Graphics/CGP2012M_Graphics.vcxproj
+++ b/VSProject/CGP2012M_Graphics/CGP2012M_Graphics/CGP2012M_Graphics.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="JN_Background.h" />
     <ClInclude Include="JN_Bubble.h" />
     <ClInclude Include="JN_BubbleController.h" />
+    <ClInclude Include="JN_Camera.h" />
     <ClInclude Include="JN_Circle.h" />
     <ClInclude Include="JN_FrameLock.h" />
     <ClInclude Include="JN_Game.h" />
@@ -42,6 +43,7 @@
     <ClCompile Include="JN_Background.cpp" />
     <ClCompile Include="JN_Bubble.cpp" />
     <ClCompile Include="JN_BubbleController.cpp" />
+    <ClCompile Include="JN_Camera.cpp" />
     <ClCompile Include="JN_Circle.cpp" />
     <ClCompile Include="JN_FrameLock.cpp" />
     <ClCompile Include="JN_Game.cpp" />
@@ -52,6 +54,7 @@
     <ClCompile Include="JN_Shader.cpp" />
     <ClCompile Include="JN_Square.cpp" />
     <ClCompile Include="JN_Texture.cpp" />
+    <ClCompile Include="JN_Transform.cpp" />
     <ClCompile Include="JN_Triangle.cpp" />
     <ClCompile Include="JN_Main.cpp" />
   </ItemGroup>
